--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,21 @@
     <link rel="icon" href="%PUBLIC_URL%/Icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#000000" />
-    <meta name="title" content="Reforce Infinity">
-<meta name="description" content="We are a portal to the Metaverse. Focused on a specialized B2B model in providing development to institutions and organizations in the metaverse.">
+    <meta name="title" content="Maradona FanFest">
+<meta name="description" content="">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://www.reforceinfinity.io/">
-<meta property="og:title" content="Reforce Infinity">
-<meta property="og:description" content="We are a portal to the Metaverse. Focused on a specialized B2B model in providing development to institutions and organizations in the metaverse.">
-<meta property="og:image" content="https://i.imgur.com/XCn5NFy.png">
+<meta property="og:title" content="Maradona FanFest">
+<meta property="og:description" content="">
+<meta property="og:image" content="">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://www.reforceinfinity.io/">
-<meta property="twitter:title" content="Reforce Infinity">
-<meta property="twitter:description" content="We are a portal to the Metaverse. Focused on a specialized B2B model in providing development to institutions and organizations in the metaverse.">
+<meta property="twitter:title" content="Maradona FanFest">
+<meta property="twitter:description" content="">
 <meta property="twitter:image" content="https://i.imgur.com/XCn5NFy.png">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/ContraTapa.png" />
     <!--
