--- a/public/index.html
+++ b/public/index.html
@@ -10,17 +10,17 @@
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://www.reforceinfinity.io/">
+<meta property="og:url" content="https://www.maradonafanfestdrop.com/">
 <meta property="og:title" content="Maradona FanFest">
 <meta property="og:description" content="">
 <meta property="og:image" content="">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://www.reforceinfinity.io/">
+<meta property="twitter:url" content="https://www.maradonafanfestdrop.com/">
 <meta property="twitter:title" content="Maradona FanFest">
 <meta property="twitter:description" content="">
-<meta property="twitter:image" content="https://i.imgur.com/XCn5NFy.png">
+<meta property="twitter:image" content="">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/ContraTapa.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
